--- a/package.json
+++ b/package.json
@@ -8,6 +8,18 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "nodemon start"
+    "start": "nodemon --exec babel-node sema.js"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "nodemon": "^1.17.5"
+  },
+  "engines": {
+    "node": ">=6.14.0"
+  },
+  "dependencies": {
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3"
   }
 }
