--- a/package.json
+++ b/package.json
@@ -8,19 +8,25 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "nodemon --exec babel-node sema.js"
+    "start": "nodemon --exec babel-node sema.js",
+    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register --exit"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.17.5"
   },
   "engines": {
     "node": ">=6.14.0"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mongoose": "^5.1.5"
   }
 }
