--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "node": ">=6.14.0"
   },
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "bluebird": "^3.5.1",
+    "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "mongoose": "^5.1.5"
+    "mongoose": "^5.1.5",
+    "passport-local": "^1.0.0",
+    "password": "^0.1.1"
   }
 }
