--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "bcrypt": "^2.0.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongoose": "^5.1.5",
-    "passport-local": "^1.0.0",
-    "password": "^0.1.1"
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
