--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.1.5",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0"
   }
 }
