--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^5.1.5",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4"
   }
 }
