Stored session in mongodb and added socket.io client

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sema.io",
   "version": "1.0.0",
   "description": "A realtime chat application to experience real-world applications",
-  "main": "sema.js",
+  "main": "sema.io.js",
   "repository": "git@github.com:nyugoh/sema.io",
   "author": "nyugoh <nyugoh@gmail.com>",
   "license": "MIT",
@@ -27,6 +27,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.1",
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
