--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "nodemon --exec babel-node sema.js",
+    "start": "nodemon --exec babel-node ./app/sema.js",
     "test": "./node_modules/.bin/mocha --compilers js:babel-core/register --exit"
   },
   "devDependencies": {
@@ -36,6 +36,7 @@
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "socket.io": "^2.1.1"
   }
 }
